Added Federica among the authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,7 @@ Ivano Cerrato
 Fulvio Risso
 Roberto Bonafiglia
 Francesco Benforte
+Federica Li Muti
 Patrick Tomassone
 Stefano Petrangeli
 Mauricio Vasquez
