--- a/use-cases/frog/isp_data_center/authentication_graph/controller-openflow/README
+++ b/use-cases/frog/isp_data_center/authentication_graph/controller-openflow/README
@@ -3,7 +3,7 @@ container.
 
 ###############################################################################
 
-Reqiured libraries:
+Required libraries:
 
 * Docker and LXC
      http://docs.docker.com/installation/
