--- a/use-cases/configuration-service/docker/dhcp/README
+++ b/use-cases/configuration-service/docker/dhcp/README
@@ -5,7 +5,7 @@ To change the network configuration to the container edit the file start_dhcp.sh
 
 ###############################################################################
 
-Reqiured libraries:
+Required libraries:
 
 * Docker and LXC
      http://docs.docker.com/installation/
