--- a/use-cases/frog/fat_cpe/firewall_client1/README
+++ b/use-cases/frog/fat_cpe/firewall_client1/README
@@ -4,7 +4,7 @@ To change the configuration of the firewall, edit the file start.sh
 
 ###############################################################################
 
-Reqiured libraries:
+Required libraries:
 
 * Docker and LXC
      http://docs.docker.com/installation/
