--- a/use-cases/frog/isp_data_center/isp_graph/dhcp_isp/README
+++ b/use-cases/frog/isp_data_center/isp_graph/dhcp_isp/README
@@ -5,7 +5,7 @@ To change the network configuration to the container edit the file start_dhcp.sh
 
 ###############################################################################
 
-Reqiured libraries:
+Required libraries:
 
 * Docker and LXC
      http://docs.docker.com/installation/
