--- a/use-cases/frog/isp_data_center/isp_graph/nat_isp/README
+++ b/use-cases/frog/isp_data_center/isp_graph/nat_isp/README
@@ -2,7 +2,7 @@ This is a nat based on iptables running in a Docker container.
 
 ###############################################################################
 
-Reqiured libraries:
+Required libraries:
 
 * Docker and LXC
      http://docs.docker.com/installation/
